resources/ext.gettingstarted.taskToolbar.less
@import 'mediawiki.mixins';

.box-shadow( ... ) {
	-moz-box-shadow: @arguments;
	-webkit-box-shadow: @arguments;
	box-shadow: @arguments;
}

#mw-gettingstarted-toolbar.mw-gettingstarted-toolbar-expanded {
	.mw-gettingstarted-toolbar-center-message {
		display: block;
	}

	.mw-gettingstarted-toolbar-show-guiders {
		margin-top: 10px;
	}
}

/* css for entire top toolbar */
#mw-gettingstarted-toolbar {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
	position: fixed;
	overflow: hidden;
	z-index: 100000006; /* I'm looking at you, Guiders */
	top: 0;
	width: 100%;

	.vertical-gradient( #7d7e7d, #333333 );

	.box-shadow( inset 0px 1px #999, 0px 3px 3px #bbb );

	padding: 12px;
	font-size: 0.8em;
	color: white;
	text-shadow: 0 -1px #444;
}

/* center region */
.mw-gettingstarted-toolbar-center {
	width: 50%;
	margin: 0 auto;
	text-align: center;
}

/* right region... displays X, and "Try another article" link */
.mw-gettingstarted-toolbar-right {
	width: 19%;
	float: right;
}

/* help button that displays guiders */
.mw-gettingstarted-toolbar-show-guiders {
	opacity: 0; /* NOT display:none because it should appear without shifting around other elements */
	margin: 0 1em;
	margin-top: -1px;
	padding: 3px 1em 2px 1em;
}

/* links in the toolbar... Back to list, Try another article */
a.mw-gettingstarted-toolbar-link {
	color: white;
	font-weight: bold;
	margin-left: 10px;
}

/* X button in top toolbar */
a.mw-gettingstarted-toolbar-dismiss {
	float: right;
	font-size: 1.5em;
	color: #aaa;
	margin-top: -5px;
	margin-right: 5px;

	&:hover {
		color: white;
		text-decoration: none;
	}
}

